--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
